# rudu

./: .gitignore  CHECKSUMS.txt  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  install.sh
.github/workflows/: ci.yml  package-managers.yml  prepare-release.yml  release.yml  security-audit.yml  submit-packages.yml  test-packages.yml
chocolatey/: rudu.nuspec
chocolatey/tools/: chocolateyinstall.ps1
docs/: AUTOMATION.md  BENCHMARK.md  OPTIMIZATIONS.md  PACKAGE_MANAGERS.md  rudu.1
homebrew/: rudu.rb
nix/: rudu.nix
scoop/: rudu.json
scripts/: benchmark.sh  package.sh  performance_test.sh  setup-automation.sh
src/: cache.rs  lib.rs  main.rs
