[package]
name = "rudu"
version = "0.2.6"
edition = "2021"
rust-version = "1.75.0"
authors = ["Wahyu Kurniawan <wahyu@tranity.id>"]
description = "Fast, parallel Rust CLI tool for analyzing directory sizes"
license = "MIT"
repository = "https://github.com/ayungavis/rudu"
homepage = "https://github.com/ayungavis/rudu"
documentation = "https://docs.rs/rudu"
readme = "README.md"
keywords = ["cli", "directory", "disk", "usage", "filesystem"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    "dist/*",
    ".github/*",
    "scripts/*",
    "homebrew/*",
    "install.sh",
    "deny.toml",
    "Makefile"
]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
walkdir = "2"
humansize = "2.1.3"
rayon = "1.10"
tempfile = "3.20.0"
colored = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
dashmap = "6.1.0"
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"
ahash = "0.8.12"
